<resources>
    <string name="app_name">NzReceiptApp</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_history">History</string>
    <string name="title_analytics">Analytics</string>
    <string name="action_capture">Capture</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_test_sample">Test Sample</string>
    <string name="msg_no_receipts">No receipts yet. Start scanning!</string>
    <string name="msg_no_items">No purchased items yet.</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_receipt">Delete receipt</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_review">Review receipt</string>
    <string name="page_indicator">of %1$d</string>
    <string name="page_indicator_initial">of 1</string>
    <string name="page_selector_description">Select page</string>
    <string name="history_page_size_description">Select records per page</string>
    <string name="action_previous">Prev</string>
    <string name="action_next">Next</string>
    <string name="history_loading_description">Loading history</string>
    <string name="history_error_title">Unable to load history</string>
    <string name="history_load_error_message">History data could not be loaded. Please try again.</string>
    <string name="history_refresh_failed">Unable to refresh history. Previous results are still shown.</string>
    <string name="history_page_load_failed">Unable to load that page. Previous results are still shown.</string>
    <string name="history_delete_succeeded">Receipt deleted</string>
    <string name="history_delete_failed">Could not delete receipt</string>
    <string name="history_delete_confirmation_title">Delete receipt?</string>
    <string name="history_delete_confirmation_message">This receipt will be permanently deleted. This action cannot be undone.</string>
    <string name="action_retry">Retry</string>
    <string name="receipt_detail_loading_description">Loading receipt details</string>
    <string name="receipt_detail_error_title">Unable to load receipt</string>
    <string name="receipt_detail_title">Receipt details</string>
    <string-array name="history_page_size_choices">
        <item>15</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    <string-array name="supermarket_choices">
        <item>Auto detect</item>
        <item>Woolworths</item>
        <item>PAK\'nSAVE</item>
    </string-array>
</resources>
