<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_scanner">

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.example.nzreceiptapp.presentation.view.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.nzreceiptapp.presentation.view.HistoryFragment"
        android:label="@string/title_history" />

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.example.nzreceiptapp.presentation.view.AnalyticsFragment"
        android:label="@string/title_analytics" />

    <fragment
        android:id="@+id/receiptDetailFragment"
        android:name="com.example.nzreceiptapp.presentation.view.ReceiptDetailFragment"
        android:label="Receipt Details">
        <argument
            android:name="receiptId"
            app:argType="string" />
    </fragment>

</navigation>
